--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,71 +1,78 @@
-
-.contact_p
-{
-	font-size:18px;
-	color:#c00000;
-	font-weight:200;
+.contact_p {
+   font-size: 18px;
+   color: #c00000;
+   font-weight: 200;
 }
 
 footer {
-	background-color: #3b4671;
-	color: #fff;
+   background-color: rgb(42, 45, 81);
+   color: #fff;
 }
-	footer a {
-		text-decoration: underline;
-		color: #fff;
-	}
-.footer-links {
+
+footer a {
+   text-decoration: underline;
+   color: #fff;
 }
+
+.footer-links {}
+
 .footer-logo {
-	margin-top: 40px;
+   margin-top: 40px;
 }
+
 .disclaimer {
-	font-size: 11px;
-	margin-top: 20px;
-	padding: 10px 20px;
-	color: #d0d0d0;
+   font-size: 11px;
+   margin-top: 20px;
+   padding: 10px 20px;
+   color: #d0d0d0;
 }
-	.disclaimer a {
-		text-decoration: underline;
-	}
+
+.disclaimer a {
+   text-decoration: underline;
+}
 
 
 .form-control {
-	display: inline-block;
+   display: inline-block;
 }
 
-input + label {
-	display: inline-block;
+input+label {
+   display: inline-block;
 }
 
 .error {
-	color: red;	
+   color: red;
 }
+
 label.error {
-	margin-left: 6px;
+   margin-left: 6px;
 }
 
 .form-group {
-	margin-bottom: 8px;
+   margin-bottom: 8px;
 }
+
 .form-control {
-	width: 90%;
+   width: 90%;
 }
 
 
-#thankyou{
-	width: 100%;
-	/*left: 30%;*/
+#thankyou {
+   width: 100%;
+   /*left: 30%;*/
 }
-#thankyou h1{
-	font-size: 24px;
-	margin-bottom: 30px;
+
+#thankyou h1 {
+   font-size: 24px;
+   margin-bottom: 30px;
 }
-#thankyou .x-large{
-	font-size: 60px;
-	margin-bottom: 5px;
+
+#thankyou .x-large {
+   font-size: 60px;
+   margin-bottom: 5px;
 }
-#thankyou p{
-	font-size: 18px;
-	word-spacing: 3px;
+
+#thankyou p {
+   font-size: 18px;
+   word-spacing: 3px;
 }
