--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,3 +76,22 @@ label.error {
    font-size: 18px;
    word-spacing: 3px;
 }
+
+.bg-blue-drk {
+   background: rgb(42, 45, 81)
+}
+
+.navbar-header img {
+   width: 300px;
+   height: 36px;
+   margin-top: 7px;
+}
+
+.navbar-default .navbar-nav>li>a {
+   color: #eee;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+   color: #eee;
+   text-decoration: underline
+}
