--- a/assets/css/leadform2.css
+++ b/assets/css/leadform2.css
@@ -220,7 +220,7 @@ form p {
 
 
 label.error {
-   width: 10px;
+   /* width: 10px; */
    font-size: 14px;
    margin: 0 0 0 -30px;
    padding: 0 30px 0 0;
