--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,17 @@ label.error {
    color: #eee;
    text-decoration: underline
 }
+
+.label_tcpa {
+   font-size: 12px;
+   color: #222;
+   line-height: 1.6
+}
+
+@media only screen and (max-width:991px) {
+   .footer-logo {
+      margin-top: 40px;
+      max-width: 200px;
+      display: inline-block
+   }
+}
