--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -776,6 +776,7 @@ a.logo {
    position: relative;
 }
 
+/* 
 .rebate-form:after {
    background-image: linear-gradient(-45deg, transparent 35px, rgba(255, 255, 255, 0.8) 0px), linear-gradient(45deg, transparent 32px, rgba(255, 255, 255, 0.8) 0px);
    background-position: left bottom;
@@ -788,7 +789,7 @@ a.logo {
    left: 0;
    position: absolute;
    width: 100%;
-}
+} */
 
 .rebate-form.form-horizontal label {
    text-align: left;
