--- a/assets/css/leadform2.css
+++ b/assets/css/leadform2.css
@@ -234,10 +234,11 @@ select {
    color: #999 !important;
 }
 
+/* 
 .rebate-form:after {
    background-image: linear-gradient(-45deg, transparent 35px, rgba(255, 255, 255, 0.9) 0px), linear-gradient(45deg, transparent 32px, rgba(255, 255, 255, 0.9) 0px);
 
-}
+} */
 
 
 
