--- a/blog/style.css
+++ b/blog/style.css
@@ -170,9 +170,9 @@ footer {
 
 #inneriframe {
    position: absolute;
-   top: -333px;
+   /* top: 20px; */
    width: 100%;
-   height: 4000px;
+   height: 100%;
 }
 
 #inneriframe::-webkit-scrollbar {
@@ -218,9 +218,9 @@ footer {
       font-size: 20px;
    }
 
-   #inneriframe {
+   /* #inneriframe {
       top: -465px;
-   }
+   } */
 }
 
 @media (max-width:575px) {
@@ -282,9 +282,10 @@ footer {
       font-size: 38px;
    }
 
+   /* 
    #inneriframe {
       height: 2350px;
-   }
+   } */
 }
 
 @media (min-width:1200px) {
